[package]
authors = ["Davide Toniolo <54995110+dtoniolo@users.noreply.github.com>"]
description = "Miscellaneous Rust utillities."
edition = "2024"
name = "rust-utils"
rust-version = "1.91"
version = "0.1.0"

[lib]
name = "rust_utils"
path = "src/lib.rs"

[[bin]]
name = "xtasks"
path = "src/xtasks.rs"

[dependencies]
anyhow = "~1.0"
clap = { version = "~4.5", features = ["derive"] }
pretty_yaml = "0.6"
taplo = "~0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"
